# proc-macro-workshop

builder/: Cargo.toml
builder/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
